tests/script_errors/tailing_gt/error.txt
Error: 
    1 | event >
      |       ^ Found the token `>` but expected one of `!=`, `%`, `&`, `*`, `+`, `-`, `.`, `.`, `/`, `;`, `<`, `<<`, `<=`, `==`, `>`, `>=`, `>>`, `>>>`, `[`, `^`, `and`, `or`, `xor`
      |         NOTE: Did you mean to use `>`?